@@ -107,6 +107,13 @@ MORSE_DATASTREAM_DICT = {
             "text": INTERFACE_DEFAULT_OUT
             }
         },
+    "morse.sensors.barometer.Barometer": {
+        "default": {
+            "socket": INTERFACE_DEFAULT_OUT,
+            "yarp": INTERFACE_DEFAULT_OUT,
+            "text": INTERFACE_DEFAULT_OUT,
+            }
+        },
     "morse.sensors.battery.Battery": {
         "default": {
             "ros": 'morse.middleware.ros.battery.Float32Publisher',
